# TaskManagerCLI

./: README.md  pyproject.toml
app/: main.py
task_manager/: __init__.py  task_manager.py
tests/: test_task_manager.py
